cambio de color en la pagina

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,13 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root>
+    <style> 
+      body{
+        background-color: red;
+      }
+    </style>
+  </app-root>
 </body>
 
 </html>
