Cambio del fondo nuevamente

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <app-root>
     <style> 
       body{
-        background-color: red;
+        background-color: rgb(224, 220, 220);
       }
     </style>
   </app-root>
